# model/system/request/sys_casbin.go
@@ -8,19 +8,6 @@ type CasbinInfo struct {
 
 // Casbin structure for input parameters
 type CasbinInReceive struct {
-	AuthorityId string       `json:"authorityId"` // 权限id
+	AuthorityId uint         `json:"authorityId"` // 权限id
 	CasbinInfos []CasbinInfo `json:"casbinInfos"`
-}
-
-func DefaultCasbin() []CasbinInfo {
-	return []CasbinInfo{
-		{Path: "/menu/getMenu", Method: "POST"},
-		{Path: "/jwt/jsonInBlacklist", Method: "POST"},
-		{Path: "/base/login", Method: "POST"},
-		{Path: "/user/register", Method: "POST"},
-		{Path: "/user/changePassword", Method: "POST"},
-		{Path: "/user/setUserAuthority", Method: "POST"},
-		{Path: "/user/setUserInfo", Method: "PUT"},
-		{Path: "/user/getUserInfo", Method: "GET"},
-	}
 }
