# router/system/sys_casbin.go
@@ -1,0 +1,20 @@
+package system
+
+import (
+	v1 "project/api"
+	"project/middleware"
+
+	"github.com/gin-gonic/gin"
+)
+
+type CasbinRouter struct {
+}
+
+func (r CasbinRouter) InitCasbinRouter(Router *gin.RouterGroup) {
+	casbinRouter := Router.Group("casbin").Use(middleware.OperationRecord())
+	var casbinApi = v1.ApiGroupApp.SystemApiGroup.CasbinApi
+	{
+		casbinRouter.POST("updateCasbin", casbinApi.UpdateCasbin)
+		casbinRouter.POST("getPolicyPathByAuthorityId", casbinApi.GetPolicyPathByAuthorityId)
+	}
+}
